--- a/angular-15-client/src/app/components/room-list/room-list.component.html
+++ b/angular-15-client/src/app/components/room-list/room-list.component.html
@@ -1,1 +1,19 @@
-<p>room-list works!</p>
+<div class="list row">
+  <div class="col-md-6">
+    <h4>Rooms List</h4>
+    <ul class="list-group">
+      <li
+        class="list-group-item"
+        *ngFor="let room of rooms; let i = index"
+        [class.active]="i == currentIndex"
+        (click)="setActiveRoom(room, i)"
+      >
+        {{ room.id }} | {{ room.title }} | {{ room.description }} | {{ room.numberOfSeats }} | {{ room.occupation ? "free" : "occupied" }}
+      </li>
+    </ul>
+  </div>
+  <div class="col-md-6">
+    <!--TODO: room detail-->
+  </div>
+
+</div>
