--- a/angular-15-client/src/app/components/room-list/room-list.component.html
+++ b/angular-15-client/src/app/components/room-list/room-list.component.html
@@ -13,7 +13,7 @@
     </ul>
   </div>
   <div class="col-md-6">
-    <!--TODO: room detail-->
+    <app-room-detail [viewMode]="true" [currentRoom]="currentRoom"></app-room-detail>
   </div>
 
 </div>
