--- a/angular-15-client/src/app/components/room-detail/room-detail.component.html
+++ b/angular-15-client/src/app/components/room-detail/room-detail.component.html
@@ -26,7 +26,7 @@
     </a>
   </div>
 
-  <div *ngIf="!currentRoom">
+  <div *ngIf="!currentRoom.id">
     <br />
     <p>Please click on a Rooms...</p>
   </div>
@@ -72,13 +72,10 @@
 
       <!-- Submit Button -->
       <button type="submit" class="btn btn-primary" [disabled]="roomForm.invalid">Update</button>
+      <button class="btn btn-danger mr-2" (click)="deleteRoom()">
+        Delete
+      </button>
     </form>
-
-
-
-    <button class="badge badge-danger mr-2" (click)="deleteRoom()">
-      Delete
-    </button>
     <p>{{ message }}</p>
   </div>
 
